Change some awkward phrasing in the docs
Changed some of the sentence/paragraph structure. Let me know if this looks good to you, or if you feel that anything has been lost.

--- a/_posts/documentation/get-started/2000-01-05-repl.md
+++ b/_posts/documentation/get-started/2000-01-05-repl.md
@@ -9,11 +9,7 @@ From version 1.5 PhantomJS will provide an Interactive Mode, also known as REPL:
 
 ### Why a REPL?
 
-Sometimes you feel the urge to test out some little/medium size Javascript code, to see how `x` or `y` works (or if they do at all). So, usually the choice would be to jump on [Firebug](http://getfirebug.com/) (or the [Webkit Inspector](http://trac.webkit.org/wiki/Web%20Inspector) or [Opera Dragonfly](http://www.opera.com/dragonfly/) or...) and type away.
-
-Well, PhantomJS is a commandline tool. It's designed for the commandline; its habitat is your console. So, as such, a way was missing to have a ready to go mode. Even Node.js has one!
-
-So, that's where the idea of the REPL came from.
+Sometimes you feel the urge to test out some small/medium size Javascript code to see how `x` or `y` works. Usually you would open the Javascript console in [Firebug](http://getfirebug.com/), the [Webkit Inspector](http://trac.webkit.org/wiki/Web%20Inspector), [Opera Dragonfly](http://www.opera.com/dragonfly/) or [Chrome DevTools](https://developers.google.com/web/tools/chrome-devtools/) and type away. The addition of a REPL now allows you to do the same from PhantomJS.
 
 ### How does it work
 
