_posts/api/fs/method/2000-01-01-write.md
fs.write(path, content, 'a'); // will append the to the end of an existing file or create and write to a newly created file.

// If you are writing text files have a "\n" at the end of content if you want to append as a new line. Otherwise, it will keep adding text to the file without going to a new line.

--- a/_posts/api/fs/method/2000-01-01-write.md
+++ b/_posts/api/fs/method/2000-01-01-write.md
@@ -25,3 +25,7 @@ fs.write(path, content, 'w');
 
 phantom.exit();
 ```
+
+fs.write(path, content, 'a'); // will append to the end of an existing file or create a new file and write to it if path does not exist.
+
+// If you are writing text files have a "\n" at the end of content if you want to append as a new line. Otherwise, it will keep adding text to the file without going to a new line.
