--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -21,6 +21,10 @@ Download [phantomjs-2.1.1-macosx.zip](https://bitbucket.org/ariya/phantomjs/down
 
 **Note**: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of OS X 10.7 (Lion) or later versions. There is no requirement to install Qt or any other libraries.
 
+If you use [Homebrew](https://brew.sh/) you can run:
+
+    brew install phantomjs
+
 ## Linux 64-bit
 
 Download [phantomjs-2.1.1-linux-x86_64.tar.bz2](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2) (22.3 MB) and extract the content.
