Improve grammar, use gender neutral pronoun

--- a/_posts/documentation/help/2000-01-02-faq.md
+++ b/_posts/documentation/help/2000-01-02-faq.md
@@ -23,7 +23,7 @@ It is fast to download and [easy to install](download.html).
 
 Because nobody is working full time on PhantomJS, there is no way to
 predict the exact timing of the completion of a particular feature.
-Every contributor to PhantomJS works on his own pace, sometimes it can
+Since every contributor to PhantomJS works at their own pace, sometimes it can
 take a few release cycles until a certain feature is shipped.
 
 **Q: Is there any update on issue XYZ??**
