--- a/_posts/documentation/explore/2000-01-06-users.md
+++ b/_posts/documentation/explore/2000-01-06-users.md
@@ -31,6 +31,7 @@ The following open-source projects are using PhantomJS as part of the testing wo
 * [Betfair](http://betfair.com) uses PhantomJS for JSUnit Testing Tool.
 * [Business-Clicks](http://www.business-clicks.de) uses PhantomJS to periodically visit complex websites with configurators, collect monitoring data and capture screenshots. Exemplary result can be seen in a [comparison of online printing services](http://www.business-clicks.de/preisvergleich-druckprodukte).
 * [CircuitLab](http://circuitlab.com) uses PhantomJS to render electronic schematic into professional-quality images and PDF (source: [blog post](https://www.circuitlab.com/blog/2012/06/20/rendering-16_000-schematics-in-the-cloud-with-rabbitmq-and/))
+* [Codiva.io](https://www.codiva.io) uses PhantomJS for testing rendering on various screensizes by generating screenshots.
 * [Consunet](https://consunet.com.au) uses PhantomJS for testing open source, self-contained HTML apps [EveryPass](https://consunet.com.au/products/everypass/) and [WhisperNote](https://consunet.com.au/products/whispernote/) using CasperJS in a GruntJS build process.
 * [Datadog](http://www.datadoghq.com) uses PhantomJS to generate images from SVG graphs and reports, built with d3.js.
 * [EffortlessHR](http://www.effortlesshr.com/) uses PhantomJS to generate employee handbooks from HTML to PDF.
