--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-Please see also http://phantomjs.org/releases.html.
+====================================================
+Please see also http://phantomjs.org/releases.html.|
+====================================================
 
 2018-01-05: No new version, but fixed QT_QP_PLATFORM bug
 
