--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 Please see also http://phantomjs.org/releases.html.|
 ====================================================
 
-2018-01-08: Fixed (and merged) 3 PRs
+2018-01-08: Fixed (and merged) 30+ PRs
 2018-01-05: No new version, but fixed QT_QP_PLATFORM bug
 
 2016-01-23: Version 2.1.0
