--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 Please see also http://phantomjs.org/releases.html.|
 ====================================================
 
+2018-01-08: PhantomJS version 2.1.3 (Dev-release). !! Do not use in production enviroments !!
+
 2018-01-08: Fixed (and merged) 30+ PRs
 2018-01-05: No new version, but fixed QT_QP_PLATFORM bug
 
