Add Axibase TSD rule engine

--- a/_posts/documentation/explore/2000-01-06-users.md
+++ b/_posts/documentation/explore/2000-01-06-users.md
@@ -27,6 +27,7 @@ The following open-source projects are using PhantomJS as part of the testing wo
 * [Apache Thrift](http://thrift.apache.org) uses PhantomJS combined with QUnit for the test suite.
 * [Apifier](https://www.apifier.com) uses PhantomJS to run their hosted web crawler for developers.
 * [Arachni Web Application Security Scanner](http://www.arachni-scanner.com/) uses PhantomJS to test the security of rich web applications.
+* [Axibase Time Series Database](https://github.com/axibase/atsd/blob/master/rule-engine/web-notifications.md#overview) uses PhantomJS in its rule engine to enrich Slack/Telegram/Hipchat/Discord/email notifications with contextual graphs.
 * [BandPage](http://www.bandpage.com) uses PhantomJS inside a custom node file watcher thingy to run QUnit-based tests on every file save.
 * [Betfair](http://betfair.com) uses PhantomJS for JSUnit Testing Tool.
 * [Business-Clicks](http://www.business-clicks.de) uses PhantomJS to periodically visit complex websites with configurators, collect monitoring data and capture screenshots. Exemplary result can be seen in a [comparison of online printing services](http://www.business-clicks.de/preisvergleich-druckprodukte).
