--- a/ChangeLog
+++ b/ChangeLog
@@ -3,12 +3,16 @@ Please see also http://phantomjs.org/releases.html.|
 ====================================================
 
 2018-01-08: PhantomJS version 2.1.3 (Dev-release). !! Do not use in production enviroments !!
-====
+
+	* Qt upgraded
+	* Mongoose upgraded
+	* Small bugfixes
+
 2018-01-08: Fixed (and merged) 30+ PRs
+
 2018-01-05: No new version, but fixed QT_QP_PLATFORM bug
-====
+
 2016-01-23: Version 2.1.0
-====
 
     New features
 
