Refurbished download page #2

--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -5,7 +5,7 @@ categories: docs docs-get-started
 permalink: download.html
 ---
 
-## Windows **New version is currently under heavy packaging and will be available shortly**
+## Windows
 
 Download [phantomjs-2.1.1-windows.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-windows.zip) (17.4 MB) and extract (unzip) the content.
 The executable `phantomjs.exe` is ready to use.
@@ -14,7 +14,8 @@ The executable `phantomjs.exe` is ready to use.
 
 Download [phantomjs-2.1.3-macosx.zip](https://github.com/ariya/phantomjs/releases/download/2.1.3/phantomjs) (16.4 MB) and extract (unzip) the content.
 
-## Linux 64-bit && and 32-bit **32-bit will become deprecated on 31th of December 2018**
+## Linux 64-bit && and 32-bit
+**32-bit will become deprecated on 31th of December 2018**
 
 Download binary (ready to use) app:: [phantomjs-2-1-3](https://github.com/ariya/phantomjs/releases/download/2.1.3/phantomjs)
 Download sources:: [ZIP](https://github.com/ariya/phantomjs/archive/2.1.3.zip) || [tar.gz](https://github.com/ariya/phantomjs/archive/2.1.3.tar.gz)
