--- a/_posts/anon/2000-01-01-anon.md
+++ b/_posts/anon/2000-01-01-anon.md
@@ -5,4 +5,6 @@ categories: anon
 permalink: anon.html
 ---
 
-__Currently nothing to display here__
+On __01-03-2018__ version __2.1.1__ of PhantomJS will reach its **End-Of-Life (EOL)** point. This means that **we will no longer support it** regardless the chanel help was requested by.
+
+We (ok ok:: I) decided to end support for 2.1.1 as Im simply to busy working on **current (2.1.3)** and **next (2.1.4)** releases.
