--- a/_posts/anon/2000-01-01-anon.md
+++ b/_posts/anon/2000-01-01-anon.md
@@ -8,3 +8,13 @@ permalink: anon.html
 On __01-03-2018__ version __2.1.1__ of PhantomJS will reach its **End-Of-Life (EOL)** point. This means that **we will no longer support it** regardless the chanel help was requested by.
 
 We (ok ok:: I) decided to end support for 2.1.1 as Im simply to busy working on **current (2.1.3)** and **next (2.1.4)** releases.
+
+Today, I created [new repo](https://gitlab.com/pixiuPL/phantomjs) that will slowly become main PJS repo (GH one will be deprecated).This is because I do not own current repository and in order to add developers I need to be an owner (Collaborator status does not give me right to give access). __Everyone__ who thinks (s)he is able to code and/or solve issue(s) __is strongly welcomed to participate__.
+
+* Why GitLab?
+
+Simply because it has much more (coolest) features than GitHub.
+
+* When will GH be deprecated?
+
+Not soon; I will make **clear annoucment** regarding deprecation.
