info about verifing security

--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -33,18 +33,6 @@ Check the official git repository [github.com/ariya/phantomjs](https://github.co
 
 To verify the integrity of the downloaded files, use the following checksums.
 
-### MD5 Checksums
+### MD5 && SHA checksums
 
-    0396e8249e082f72c1e39d33fc9d8de6 phantomjs-2.1.3-linux-i686.tar.bz2
-    1c947d57fce2f21ce0b43fe2ed7cd361 phantomjs-2.1.3-linux-x86_64.tar.bz2
-    b0c038bd139b9ecaad8fd321070c1651 phantomjs-2.1.3-macosx.zip
-    4104470d43ddf2a195e8869deef0aa69 phantomjs-2.1.3-windows.zip
-
-### SHA-256 Checksums
-
-    80e03cfeb22cc4dfe4e73b68ab81c9fdd7c78968cfd5358e6af33960464f15e3  phantomjs-2.1.3-linux-i686.tar.bz2
-    86dd9a4bf4aee45f1a84c9f61cf1947c1d6dce9b9e8d2a907105da7852460d2f  phantomjs-2.1.3-linux-x86_64.tar.bz2
-    538cf488219ab27e309eafc629e2bcee9976990fe90b1ec334f541779150f8c1  phantomjs-2.1.3-macosx.zip
-    d9fb05623d6b26d3654d008eab3adafd1f6350433dfd16138c46161f42c7dcc8  phantomjs-2.1.3-windows.zip
-
-
+Will __not__ be published here anymore. Instead, special tool for verifing both MD5 %% SHA checksums is under development and will be made available here when ready.
