--- a/_posts/anon/2000-01-01-anon.md
+++ b/_posts/anon/2000-01-01-anon.md
@@ -4,7 +4,7 @@ title: Announcements
 categories: anon
 permalink: anon.html
 ---
-Our page will face lift throughout comming week. Stay calm - its not going to be bad :)
+Our page will face facelift throughout comming week and you most certainly __will__ experience downtime(s). Stay calm - its not going to be bad :)
 
 =======================================================================================
 
