--- a/_posts/anon/2000-01-01-anon.md
+++ b/_posts/anon/2000-01-01-anon.md
@@ -3,6 +3,7 @@ layout: post
 title: Announcements
 categories: anon
 permalink: anon.html
+style: @import "{{ site.theme }}"; 
 ---
 Our page will face facelift throughout comming week and you most certainly __will__ experience downtime(s). Stay calm - its not going to be bad :)
 
