Revert "fixes cd"
This reverts commit 44fbdb70d37ce9b6f1e45ee583eace99044872ff.

--- a/_posts/anon/2000-01-01-anon.md
+++ b/_posts/anon/2000-01-01-anon.md
@@ -3,9 +3,8 @@ layout: post
 title: Announcements
 categories: anon
 permalink: anon.html
-style: @import "{{ site.theme }}"; 
 ---
-Our page will face facelift throughout comming week and you most certainly __will__ experience downtime(s). Stay calm - its not going to be bad :)
+Our page will face lift throughout comming week. Stay calm - its not going to be bad :)
 
 =======================================================================================
 
