add deprecation anon

--- a/_posts/anon/2000-01-01-anon.md
+++ b/_posts/anon/2000-01-01-anon.md
@@ -4,6 +4,10 @@ title: Announcements
 categories: anon
 permalink: anon.html
 ---
+PJS 2.5 is not supported. Requests for support (RfS) will be ignored.
+
+=======================================================================================
+
 Our page will face lift throughout comming week. Stay calm - its not going to be bad :)
 
 =======================================================================================
